--- a/src/index.html
+++ b/src/index.html
@@ -38,10 +38,7 @@
       <main class="main">
         <section class="carousel-list">
           <div class="carousel-item">
-            <img
-              src="https://images.unsplash.com/photo-1439158771502-46975f6e44e9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2851&q=80"
-              alt="main ima"
-            />
+            <img src="./images/main-screen.png" alt="main ima" />
           </div>
           <button class="prev-btn">
             <i class="fas fa-chevron-left"></i>
@@ -76,22 +73,34 @@
           <h2 class="best-product-title">our best sellers</h2>
           <ul class="best-product-list">
             <li class="best-product-item">
-              <img src="./images/shoes1.png" alt="" />
+              <a href="#">
+                <img src="./images/shoes1.png" alt="" />
+                <div>
+                  <div>Brown Chelsea Boots</div>
+                  <div>from $21.95</div>
+                </div>
+              </a>
             </li>
             <li class="best-product-item">
-              <img src="./images/shoes2.png" alt="" />
+              <a href="#">
+                <img src="./images/shoes2.png" alt="" />
+                <div>
+                  <div>Formal Loafers</div>
+                  <div>from $23.9</div>
+                </div>
+              </a>
             </li>
             <li class="best-product-item">
-              <img src="./images/shoes5.png" alt="" />
+              <a href="#">
+                <img src="./images/shoes5.png" alt="" />
+                <div>
+                  <div>Ugly Shoes</div>
+                  <div>from $18.5</div>
+                </div>
+              </a>
             </li>
           </ul>
         </section>
-
-        <!-- <section class="advertisement">
-          <div class="temp">
-            <img src="./images/photo-1574809736435-dced6ecf6ce7.jpeg" alt="" />
-          </div>
-        </section> -->
 
         <section class="journal">
           <h2 class="journal-title">from our journal</h2>
@@ -151,7 +160,25 @@
           </ul>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <span class="footer-content">keep up to date with our socials</span>
+        <h2 class="footer-title">follow us</h2>
+
+        <ul class="social-list">
+          <li class="social-item">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+          </li>
+          <li class="social-item">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </li>
+          <li class="social-item">
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </li>
+          <li class="social-item">
+            <a href="#"><i class="fab fa-youtube"></i></a>
+          </li>
+        </ul>
+      </footer>
     </div>
 
     <script>
