fix: fixed mobile layout

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <h1 class="title">MoenMart</h1>
+        <h1 class="title">Moen</h1>
         <nav class="nav">
           <input class="nav-toggle" id="nav-toggle" type="checkbox" />
           <label class="navicon" for="nav-toggle"
