--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="container">
-      <header class="header">
+      <!-- <header class="header">
         <h1 class="title">Moen</h1>
         <nav class="nav">
           <input class="nav-toggle" id="nav-toggle" type="checkbox" />
@@ -38,11 +38,11 @@
             </li>
           </ul>
         </nav>
-      </header>
+      </header> -->
       <main class="main">
         <section class="carousel-list">
           <div class="carousel-item">
-            <img src="./images/main-screen.png" alt="main ima" />
+            <img src="./src/images/main-screen.png" alt="main ima" />
           </div>
           <button class="prev-btn">
             <i class="fas fa-chevron-left"></i>
@@ -75,7 +75,7 @@
           <ul class="best-product-list">
             <li class="best-product-item">
               <a href="#">
-                <img src="./images/shoes1.png" alt="" />
+                <img src="./src/images/shoes1.png" alt="" />
                 <div>
                   <div>Brown Chelsea Boots</div>
                   <div>from $21.95</div>
@@ -84,7 +84,7 @@
             </li>
             <li class="best-product-item">
               <a href="#">
-                <img src="./images/shoes2.png" alt="" />
+                <img src="./src/images/shoes2.png" alt="" />
                 <div>
                   <div>Formal Loafers</div>
                   <div>from $23.9</div>
@@ -93,7 +93,7 @@
             </li>
             <li class="best-product-item">
               <a href="#">
-                <img src="./images/shoes5.png" alt="" />
+                <img src="./src/images/shoes5.png" alt="" />
                 <div>
                   <div>Ugly Shoes</div>
                   <div>from $18.5</div>
@@ -179,23 +179,5 @@
         </ul>
       </footer>
     </div>
-    <script>
-      const $prevBtn = document.querySelector('.prev-btn');
-      const $nextBtn = document.querySelector('.next-btn');
-      const $carouselList = document.querySelector('.carousel-list');
-      const $navToggle = document.querySelector('.nav-toggle');
-      $carouselList.addEventListener('mouseover', () => {
-        $prevBtn.classList.add('active');
-        $nextBtn.classList.add('active');
-      });
-      $carouselList.addEventListener('mouseout', () => {
-        $prevBtn.classList.remove('active');
-        $nextBtn.classList.remove('active');
-      });
-      $navToggle.addEventListener('change', e => {
-        if (e.target.checked) document.body.style.overflow = 'hidden';
-        else document.body.style.overflow = 'visible';
-      });
-    </script>
   </body>
 </html>
