feat: complete shop route and shop view

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    
   </head>
   <body>
     <div class="container">
-      <!-- <header class="header">
+      <header class="header">
         <h1 class="title">Moen</h1>
         <nav class="nav">
           <input class="nav-toggle" id="nav-toggle" type="checkbox" />
@@ -21,24 +21,24 @@
             ><span class="navicon-bar"></span
           ></label>
           <ul class="nav-list">
-            <li class="item">
-              <a href="#">shop</a>
+            <li class="item" ">
+              <button type='button' route="/shop">shop</button>
             </li>
             <li class="item">
-              <a href="#">lookbook</a>
+              <button type='button' route="/lookbook">lookbook</button>
             </li>
             <li class="item">
-              <a href="#">blog</a>
+              <button type='button' route='/bolg'>blog</button>
             </li>
             <li class="item">
-              <a href="#">guideline</a>
+              <button type='button' route="/guideline">guideline</button>
             </li>
             <li class="item">
-              <a href="#">context</a>
+              <button type='button' route="/contents">contents</button>
             </li>
           </ul>
         </nav>
-      </header> -->
+      </header>
       <main class="main">
         <section class="carousel-list">
           <div class="carousel-item">
