--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
       </header>
       <main class="main">
-        <section class="carousel-list">
+        <!-- <section class="carousel-list">
           <div class="carousel-item">
             <img src="./src/images/main-screen.png" alt="main ima" />
           </div>
@@ -158,7 +158,7 @@
               </div>
             </li>
           </ul>
-        </section>
+        </section> -->
       </main>
       <footer class="footer">
         <span class="footer-content">keep up to date with our socials</span>
