--- a/src/index.html
+++ b/src/index.html
@@ -28,138 +28,18 @@
               <button type='button' route="/lookbook">lookbook</button>
             </li>
             <li class="item">
-              <button type='button' route='/bolg'>blog</button>
+              <button type='button' route='/contents'>contents</button>
             </li>
             <li class="item">
-              <button type='button' route="/guideline">guideline</button>
+              <button type='button' route="/cart">cart</button>
             </li>
             <li class="item">
-              <button type='button' route="/contents">contents</button>
+              <button type='button' route="/login">login</button>
             </li>
           </ul>
         </nav>
       </header>
-      <main class="main">
-        <!-- <section class="carousel-list">
-          <div class="carousel-item">
-            <img src="./src/images/main-screen.png" alt="main ima" />
-          </div>
-          <button class="prev-btn">
-            <i class="fas fa-chevron-left"></i>
-          </button>
-          <button class="next-btn">
-            <i class="fas fa-chevron-right"></i>
-          </button>
-        </section>
-        <section class="collection">
-          <div class="collection-img">
-            <img
-              src="https://images.unsplash.com/photo-1579429713897-b98f6afbc295?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80"
-              alt="Collaboration-Bag"
-            />
-          </div>
-          <div class="collection-info">
-            <p>
-              simply dummy text of the printing and typesetting industry. Lorem Ipsum
-              has been the industry's standard dummy text ever since the 1500s, when
-              an unknown printer took a galley of type and scrambled it to make a
-              type specimen book. It has survived not only five centuries, but also
-              the leap into electronic typesetting, remaining essentially unchanged.
-            </p>
-            <a href="#">watch more products</a>
-          </div>
-        </section>
-        <section class="best-product">
-          <span class="best-product-sub-title">top picker</span>
-          <h2 class="best-product-title">our best sellers</h2>
-          <ul class="best-product-list">
-            <li class="best-product-item">
-              <a href="#">
-                <img src="./src/images/shoes1.png" alt="" />
-                <div>
-                  <div>Brown Chelsea Boots</div>
-                  <div>from $21.95</div>
-                </div>
-              </a>
-            </li>
-            <li class="best-product-item">
-              <a href="#">
-                <img src="./src/images/shoes2.png" alt="" />
-                <div>
-                  <div>Formal Loafers</div>
-                  <div>from $23.9</div>
-                </div>
-              </a>
-            </li>
-            <li class="best-product-item">
-              <a href="#">
-                <img src="./src/images/shoes5.png" alt="" />
-                <div>
-                  <div>Ugly Shoes</div>
-                  <div>from $18.5</div>
-                </div>
-              </a>
-            </li>
-          </ul>
-        </section>
-        <section class="journal">
-          <h2 class="journal-title">from our journal</h2>
-          <ul class="journal-list">
-            <li class="journal-item">
-              <a href="#">
-                <img
-                  src="https://uploads-ssl.webflow.com/5b63ff5acd934c35bc633385/5b890ea2ddb98b5757769933_journal-pic-5.png"
-                  alt=""
-                />
-              </a>
-              <div class="journal-item-info">
-                <h3 class="journal-item-title">friend of moen: odile gautreau</h3>
-                <p class="journal-item-detail">
-                  Model, graphic designer and photographer - Odile Gautreau is a
-                  truly multifaceted talent.
-                </p>
-              </div>
-            </li>
-            <li class="journal-item">
-              <a href="#">
-                <img
-                  src="https://uploads-ssl.webflow.com/5b63ff5acd934c35bc633385/5b7efa8a463768f1c4cbfb2c_journal-1.png"
-                  alt=""
-                />
-              </a>
-              <div class="journal-item-info">
-                <h3 class="journal-item-title">
-                  FRIEND OF SANDQVIST: ALIZÉ DEMANGe.
-                </h3>
-                <p class="journal-item-detail">
-                  Fashion stylist Alizé Demange has made quite the name for herself
-                  in the fashion world, styling some of the UK's most exciting
-                  recording artists and having her work featured in a range of
-                  international publications.
-                </p>
-              </div>
-            </li>
-            <li class="journal-item">
-              <a href="#">
-                <img
-                  src="https://uploads-ssl.webflow.com/5b63ff5acd934c35bc633385/5b7efd06bf96d90b88c83473_journal-2.png"
-                  alt=""
-                />
-              </a>
-              <div class="journal-item-info">
-                <h3 class="journal-item-title">
-                  INTERVIEW WITH SUSTAINABILITY MANAGER HENRIK
-                </h3>
-                <p class="journal-item-detail">
-                  Meet our Sustainability Manager, Henrik! This is the man who leads
-                  Sandqvist's sustainability work towards our goal of becoming a
-                  world leading example for sustainable bags.
-                </p>
-              </div>
-            </li>
-          </ul>
-        </section> -->
-      </main>
+      <main class="main"></main>
       <footer class="footer">
         <span class="footer-content">keep up to date with our socials</span>
         <h2 class="footer-title">follow us</h2>
